--- a/client/src/css/Gallery.css
+++ b/client/src/css/Gallery.css
@@ -4,7 +4,6 @@
   height: 100vh; }
 
 .panoramicImageSection {
-  height: calc(100vh - 111px);
   margin: 0;
   padding: 50px 50px 0 50px;
   background-color: #fff;
