--- a/client/src/css/_imageFlip.scss
+++ b/client/src/css/_imageFlip.scss
@@ -5,7 +5,7 @@
 }
 
 .panoramicImageSection {
-    height: calc(100vh - 111px);
+    // height: calc(100vh - 111px);
     margin: 0;
     padding: 50px 50px 0 50px;
     background-color: #fff;
